# chess_board

./: README.md  checker-board.ipynb  pyproject.toml
